# inference-engine

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  HOW_TO.md  HTTP_API.md  Performance.md  RAW_BUILD.md  README.md  version.h.in
benchmarks/: CMakeLists.txt  benchmark_concurrent.cpp  benchmark_utils.hpp
benchmarks/NV_cuda/: benchmark_cuda_bandwidth_test.cpp  benchmark_nvjpeg_speed.cpp  nvJpegDecoder.hpp  nvJpegDecoderPriv.hpp
benchmarks/helper/: helper.hpp
cmake/modules/: 0_openssl.cmake  10_eigen3.cmake  11_boost.cmake  12_spdlog.cmake  13_gtest.cmake  1_nodemgr.cmake  2_common_basic.cmake  3_libhv.cmake  3_server_send.cmake  4_ffmpeg.cmake  5_acceleration.cmake  6_opencv.cmake  7_blend2d.cmake  80_modules.cmake  90_cppzmq.cmake  99_version.cmake  9_modbus.cmake
cmake/toolchains/: aarch64_linux_tx5368.toolchain
data/: feature-library.json  jpeg-preview.json
data/config/: alg_config.json  modbus_cfg.json
doc/: boxfilter.drawio  cross_border.md  target_tracker.md
docker/base-devel/: Dockerfile
docker/tx5368/: Dockerfile
programs/: CMakeLists.txt  node_app.cpp  node_srv.cpp  node_tools.cpp  test_angle_calculator.cpp  test_cross_border.cpp  test_fake_cross_border.cpp  test_pose_action.cpp  test_post_process.cpp  test_seg_calculation.cpp  test_serial.cpp
programs/CV_Samples/: CMakeLists.txt  cv_node_app.cpp
programs/ffmpeg_samples/: test_decode_v3.cpp  test_demux_v3.cpp  test_encode_v3.cpp
programs/modules/: test_ai_solution.cpp
src/: basic_logs.cpp  basic_logs.hpp  debug_tools.cpp  debug_tools.hpp  ngraph_app.cpp  ngraph_app.hpp  node_property_table.hpp  runnable_node.cpp  runnable_node.hpp  utils.cpp  utils.hpp
src/common_basic/: basic_macro_concepts.hpp  basic_singleton.hpp  thread_dbg_utils.cpp  thread_dbg_utils.hpp  thread_worker.hpp
src/inference_server/: _inference_http_service_v1.hpp  _inference_preferences.hpp  _inference_task.hpp  _inference_task_json.hpp  _inference_types.hpp  _inference_utils.hpp  inference_server_basic.hpp  inference_server_v0.cpp  inference_server_v0.hpp
src/inference_server/device_monitor/: base_device_monitor.hpp  bm1684_device_monitor.hpp  intel_device_monitor.hpp  jetson_device_monitor.hpp  mlu2xx_device_monitor.hpp  nvidia_device_monitor.hpp  rv1126_device_monitor.hpp  tx5368_device_monitor.hpp
src/inference_server/helper/: inference_helper.hpp  inference_slice_v1.hpp
src/modules/: mem_pool.hpp  types.hpp
src/modules/algorithm/: abstract_algo.h  algo_factory.h  tsing_inference.cpp  tsing_inference.h
src/modules/bytetrack/: BYTETracker.cpp  BYTETracker.h  STrack.cpp  STrack.h  target_tracker.cpp  target_tracker.h
src/modules/codec/: bitstream_filter_v3.hpp  decode_video_v3.cpp  decode_video_v3.h  demux_stream_v3.cpp  demux_stream_v3.h  encode_video_v3.cpp  encode_video_v3.h  filter_video_v3.cpp  filter_video_v3.h  mpp_decoder.cpp  mpp_decoder.h  remux_stream_v3.cpp  remux_stream_v3.h  video_decoder.h
src/modules/cvrelate/: geometry.cpp  geometry.h  graphics.cpp  graphics.h
src/modules/modbus/: modbus_device.cpp  modbus_device.h
src/modules/network/: downloader.cpp  downloader.h  event_socket.h  zmq_socket.h
src/modules/postprocess/: angle_calculator.cpp  angle_calculator.h  cross_border.cpp  cross_border.h  ellipse_rectifier.cpp  ellipse_rectifier.h  fft_counter.cpp  fft_counter.h  naive_counter.cpp  naive_counter.h  seg_area.cpp  seg_area.h  seg_volume.cpp  seg_volume.h  track_smoothing.cpp  track_smoothing.h
src/modules/server_send/: server_send.cpp  server_send.hpp  ws_notifier.hpp
src/modules/wrapper/: draw_image.cpp  draw_image.h  export_video.cpp  export_video.h  tscv.hpp  tscv_operator.cpp  tscv_operator.h  tsing_jpeg_encode.cpp  tsing_jpeg_encode.h  tsing_wrapper.hpp
src/modules/zmq_cv_post/: cppzmq_instance.cpp  cppzmq_instance.hpp
src/node_manager/: basic_managed_shared.hpp  bind_node_manager.cpp  node_manager.cpp  node_manager.hpp
src/nodes/: jpeg_previewer_node.hpp  message_ref_time.hpp  message_templates.hpp  node_any_basic.hpp  node_msg_def.h  node_struct_def.h  video_capter_node.hpp
src/nodes/algorithm/: classifier_node_v2.cpp  classifier_node_v2.h  detection_node_v2.cpp  detection_node_v2.h  inference_node_v2.cpp  inference_node_v2.h
src/nodes/deprecated/: avtocv_node_v2.hpp  cvtoav_node_v2.hpp  node_specific_msg.hpp
src/nodes/ffvcodec/: feature_library.cpp  feature_library.h  image_server_node_v2.cpp  (+4 more)
(+66 files in other folders)
